Update cluster-setup.md